--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,7 +2,10 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:endColor="#FFFFFF"
+        android:endColor="#d3d3d3"
         android:startColor="#abdded"
         android:type="linear" />
+    <corners
+        android:topRightRadius="20dp"
+        android:bottomRightRadius="20dp"/>
 </shape>
