--- a/app/src/main/res/layout/fragment_grafik_kiri.xml
+++ b/app/src/main/res/layout/fragment_grafik_kiri.xml
@@ -15,11 +15,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:fontFamily="@font/koho"
-            android:textStyle="bold"
+            android:fontFamily="@font/andada"
             android:text="@string/title_grafikkiri"
+            android:textColor="@color/black"
             android:textSize="29sp"
-            android:textColor="@color/black"/>
+            android:textStyle="bold" />
 
         <RelativeLayout
             android:layout_width="match_parent"
