--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,25 +4,35 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/home"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_prosedur"
-            android:icon="@drawable/iteration"
-            android:title="@string/menu_prosedur" />
-        <item
-            android:id="@+id/nav_daftarkerjasama"
-            android:icon="@drawable/clipboard"
-            android:title="@string/menu_daftar" />
-        <item
-            android:id="@+id/nav_grafik"
-            android:icon="@drawable/diagram"
-            android:title="@string/menu_grafik" />
-        <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/user"
-            android:title="@string/menu_profile" />
+        <item android:title="Menu">
+            <menu>
+                <item
+                    android:id="@+id/nav_home"
+                    android:icon="@drawable/home"
+                    android:title="@string/menu_home" />
+                <item
+                    android:id="@+id/nav_prosedur"
+                    android:icon="@drawable/iteration"
+                    android:title="@string/menu_prosedur" />
+                <item
+                    android:id="@+id/nav_daftarkerjasama"
+                    android:icon="@drawable/clipboard"
+                    android:title="@string/menu_daftar" />
+                <item
+                    android:id="@+id/nav_grafik"
+                    android:icon="@drawable/diagram"
+                    android:title="@string/menu_grafik" />
+            </menu>
+        </item>
+
+        <item android:title="Profile">
+            <menu>
+                <item
+                    android:id="@+id/nav_profile"
+                    android:icon="@drawable/user"
+                    android:title="@string/menu_profile" />
+            </menu>
+        </item>
+
     </group>
 </menu>
